# asterius

./: .gitmodules
.github/workflows/: build-linux-dwarf.mk  build-musl.sh  build-standard.sh  build-tinfo6-dwarf.sh  build-tinfo6.sh  build-windows.sh  pipeline.yml
asterius-libc/: asterius-libc.wasm  make.sh
asterius/rts/: rts.mjs  rts.stableptr.mjs
asterius/src/Asterius/: Builtins.hs  Main.hs  Resolve.hs
asterius/src/Asterius/Backends/: Binaryen.hs  WasmToolkit.hs
yhseq-web/: ChangeLog.md  main.hs  yhseq-web.cabal
