cabal-version: 1.12

name:           yhseq-web
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Hexirp/asterius#readme>
homepage:       https://github.com/Hexirp/asterius#readme
bug-reports:    https://github.com/Hexirp/asterius/issues
author:         Hexirp
maintainer:     hexirp@gmail.com
copyright:      (C) Hexirp 2019
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Hexirp/asterius

executable yhseq-web
  main-is: Main.hs
  other-modules:
      Paths_yhseq_web
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.13.0.0 && <4.14
    , containers >=0.6.2.1 && <0.7
    , vector >=0.12.1.2 && <0.13
    , yhseq >=0.3.0.0 && <0.4
  default-language: Haskell2010
